<resources>
    <string name="app_name">week_one_lab</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_login_details">Forgot your login details?</string>
    <string name="help_signing_in">Get help signing in.</string>
    <string name="or">OR</string>
    <string name="facebook_log_in">Log in with Facebook</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up.</string>
    <string name="border">border</string>
    <string name="line">line</string>
</resources>
